--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "type": "module",
   "scripts": {
-    "build": "npx wrangler deploy --dry-run",
-    "deploy": "npx wrangler deploy",
-    "lint": "npx eslint . && tsc && npx depcheck",
-    "format": "npx prettier -w ."
+    "build": "bunx wrangler deploy --dry-run",
+    "deploy": "bunx wrangler deploy",
+    "lint": "eslint . && tsc",
+    "format": "bunx prettier -w ."
   },
   "prettier": "@jill64/prettier-config",
   "devDependencies": {
     "@jill64/eslint-config-ts": "2.0.16",
     "@jill64/prettier-config": "1.0.0",
-    "octoflare": "1.3.0",
-    "typescript": "5.8.2"
+    "octoflare": "2.1.0",
+    "typescript": "5.8.2",
+    "eslint": "9.22.0"
   }
 }
